# methylSaguaro

./: .gitmodules  CMakeLists.txt  README.md  index.html  tutorial.html
scripts/postprocessing/: processMethylSaguaroOutput.pl
scripts/preprocessing/: formatInput.pl  mergeAndFormat.sh  mergeAndFormat.sh~  methylSaguaroFormatter.pl  ms_pipeline.sh
src/: MethylSaguaro.cc
